Fix class keyword always showing